[gd_scene load_steps=31 format=3 uid="uid://ci70mpdu1yk5g"]

[ext_resource type="Script" uid="uid://dgxbx852w1ogj" path="res://Scripts/Enemies/Necromancer/necromancer.gd" id="1_pwncg"]
[ext_resource type="Texture2D" uid="uid://k5puvnbpg420" path="res://Assets/Enemies/ENEMY_NECROMANCER.png" id="2_0u5aw"]
[ext_resource type="Shader" uid="uid://du5s436ct6q2q" path="res://Assets/Effects/on_hit_flash.gdshader" id="2_byyqd"]
[ext_resource type="Script" uid="uid://bpk851cryqf1f" path="res://Scripts/States/State Control.gd" id="4_f2shu"]
[ext_resource type="Script" uid="uid://dplmy4wbp01qs" path="res://Scripts/States/EnemyIdle.gd" id="5_l3tat"]
[ext_resource type="Script" uid="uid://bsvmvi373paec" path="res://Scripts/Enemies/Necromancer/EnemyChaseNecromancer.gd" id="6_eko0r"]
[ext_resource type="Script" uid="uid://ck5gaaab0fvfa" path="res://Scripts/Enemies/Necromancer/EnemyAttackNecromancer.gd" id="7_woxk7"]
[ext_resource type="Script" uid="uid://c4g08avna1fjd" path="res://Scripts/States/EnemyRetreat.gd" id="8_7y2c8"]
[ext_resource type="PackedScene" uid="uid://5dnflp2x3nl4" path="res://Scenes/Projectiles/magic_missile.tscn" id="8_ctycn"]
[ext_resource type="Script" uid="uid://dcc0go2d02ckp" path="res://Scripts/Projectiles and Effects/EnemySummon.gd" id="9_vb21g"]
[ext_resource type="PackedScene" uid="uid://cvk5t5c7vvgv6" path="res://Scenes/Enemies/flail_skeleton.tscn" id="10_eo0t0"]
[ext_resource type="PackedScene" uid="uid://4evtkf3vje6p" path="res://Scenes/Projectiles/summon_effect.tscn" id="11_eupuc"]
[ext_resource type="Script" uid="uid://ddk5n0w8658gd" path="res://Scripts/Hurtboxes/Hurtbox.gd" id="13_f46sl"]
[ext_resource type="AudioStream" uid="uid://clf1npumucsf3" path="res://Assets/Sounds/Enemies/478271__joao_janz__8-bit-explosion-1_4.wav" id="14_1t88p"]
[ext_resource type="AudioStream" uid="uid://bihw5plpyvxx6" path="res://Assets/Sounds/Enemies/Slime/353250__zuzek06__slimejump.wav" id="15_0uktk"]
[ext_resource type="AudioStream" uid="uid://dmggj3bb1d1jy" path="res://Assets/Sounds/Enemies/Slime/524952__magnuswaker__squelch-2.wav" id="16_v2j72"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f7sk2"]
shader = ExtResource("2_byyqd")
shader_parameter/flash_color = Color(1, 0, 0, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pdttr"]
radius = 7.0
height = 24.0

[sub_resource type="Animation" id="Animation_6pa2e"]
resource_name = "Attack"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_a6n62"]
resource_name = "Death"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1), Vector2i(12, 1), Vector2i(13, 1), Vector2i(14, 1), Vector2i(15, 1), Vector2i(16, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_spb5g"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jv2hr"]
resource_name = "OnHit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.5, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:material:shader_parameter/flash_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_6vsbk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cheg3"]
resource_name = "Summon"
length = 0.9
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:material:shader_parameter/flash_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.835398, 0.356332, 0.824726, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.04, 0.09, 0.14, 0.19, 0.24, 0.29, 0.34, 0.39, 0.44, 0.49, 0.54, 0.59, 0.64, 0.69, 0.74, 0.79, 0.84, 0.89),
"transitions": PackedFloat32Array(1, 8.93604e-05, 0.00285954, 1e-05, 1.00671e-05, 1e-05, 3.88965e-05, 8.05362e-05, 4.16883e-05, 1e-05, 7.25834e-05, 0.0005055, 0.000505501, 1e-05, 0.000102649, 0.000396607, 0.00390625, 1e-05, 0.000106268),
"update": 0,
"values": [0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_b6ywu"]
resource_name = "Walk"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yixv0"]
_data = {
&"Attack": SubResource("Animation_6pa2e"),
&"Death": SubResource("Animation_a6n62"),
&"Idle": SubResource("Animation_spb5g"),
&"OnHit": SubResource("Animation_jv2hr"),
&"RESET": SubResource("Animation_6vsbk"),
&"Summon": SubResource("Animation_cheg3"),
&"Walk": SubResource("Animation_b6ywu")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_to1xr"]
radius = 16.0
height = 48.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jyny8"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("14_1t88p")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_m1200"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("15_0uktk")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nfh73"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("16_v2j72")

[node name="Necromancer" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(0.75, 0.75)
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_pwncg")
HP = 5

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_f7sk2")
position = Vector2(0, -15)
texture = ExtResource("2_0u5aw")
hframes = 17
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_pdttr")

[node name="State Control" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_f2shu")
initial_state = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="State Control" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_l3tat")
enemy = NodePath("../..")

[node name="EnemyChase" type="Node" parent="State Control" node_paths=PackedStringArray("rayCast", "enemy", "navigation_agent")]
script = ExtResource("6_eko0r")
rayCast = NodePath("../../AimRaycast")
enemy = NodePath("../..")
navigation_agent = NodePath("../../NavigationAgent2D")
attempt_attack_range = 150

[node name="EnemyAttack" type="Node" parent="State Control" node_paths=PackedStringArray("rayCast", "enemy")]
script = ExtResource("7_woxk7")
projectile = ExtResource("8_ctycn")
rayCast = NodePath("../../AimRaycast")
enemy = NodePath("../..")

[node name="attack_cooldown" type="Timer" parent="State Control/EnemyAttack"]
wait_time = 1.5
one_shot = true

[node name="EnemySummon" type="Node" parent="State Control" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_vb21g")
enemy = NodePath("../..")
summoned_creature = ExtResource("10_eo0t0")
summon_effect = ExtResource("11_eupuc")

[node name="summon_cooldown" type="Timer" parent="State Control/EnemySummon"]
wait_time = 5.0
one_shot = true

[node name="EnemyRetreat" type="Node" parent="State Control" node_paths=PackedStringArray("enemy", "navigation_agent")]
script = ExtResource("8_7y2c8")
enemy = NodePath("../..")
navigation_agent = NodePath("../../NavigationAgent2D")
retreat_duration = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yixv0")
}

[node name="AimRaycast" type="RayCast2D" parent="."]
target_position = Vector2(300, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 32
script = ExtResource("13_f46sl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -12)
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_to1xr")
debug_color = Color(0, 1, 0, 0.419608)

[node name="death_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_jyny8")
volume_db = 6.0

[node name="walk_sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = SubResource("AudioStreamRandomizer_m1200")
volume_db = -10.0

[node name="ouch_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_nfh73")
volume_db = -5.0

[node name="attack_sfx" type="AudioStreamPlayer2D" parent="."]

[node name="summon_sfx" type="AudioStreamPlayer2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="timeout" from="State Control/EnemyAttack/attack_cooldown" to="State Control/EnemyAttack" method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="State Control/EnemySummon/summon_cooldown" to="State Control/EnemySummon" method="_on_summon_cooldown_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="State Control/EnemyAttack" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="State Control/EnemySummon" method="_on_animation_player_animation_finished"]
